--- a/config/deploy/production.rb.sample
+++ b/config/deploy/production.rb.sample
@@ -6,6 +6,7 @@
 # server "example.com", user: "deploy", roles: %w{app db web}, my_property: :my_value
 # server "example.com", user: "deploy", roles: %w{app web}, other_property: :other_value
 # server "db.example.com", user: "deploy", roles: %w{db}
+server '162.243.74.190', user: 'deployer', roles: %w{app}
 
 
 
@@ -20,6 +21,7 @@
 # role :app, %w{deploy@example.com}, my_property: :my_value
 # role :web, %w{user1@primary.com user2@additional.com}, other_property: :other_value
 # role :db,  %w{deploy@example.com}
+role :app, %w{deployer@162.243.74.190}
 
 
 
@@ -41,11 +43,12 @@
 #
 # Global options
 # --------------
-#  set :ssh_options, {
-#    keys: %w(/home/rlisowski/.ssh/id_rsa),
-#    forward_agent: false,
-#    auth_methods: %w(password)
-#  }
+ set :ssh_options, {
+    forward_agent: false,
+    auth_methods: %w(password),
+    password: 'password',
+    user: 'deployer',
+}
 #
 # The server-based syntax can be used to override options:
 # ------------------------------------
