--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,12 @@
-language: html css
+language: node_js
+node_js:
+  - "6"
+  - "6.1"
+  - "5.11"
+  - "0.6"
+  - "iojs"
+before_script:
+  - npm install
+  - npm install -g gulp
+script:
+  - gulp
